--- a/app/src/main/res/layout/effect_recycle_views.xml
+++ b/app/src/main/res/layout/effect_recycle_views.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/filter_recycle_view"
+        android:id="@+id/effect_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
