--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
+        android:background="@color/colorToolBarBackground"
+        android:elevation="2dp"
         android:minHeight="?attr/actionBarSize" />
 
 </RelativeLayout>
