--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="0dp"
+        android:background="@color/colorToolBarBackground"
+        android:elevation="2dp"
         android:minHeight="?attr/actionBarSize" />
 
     <LinearLayout
