--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/tutorial_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp"
-        android:minHeight="?attr/actionBarSize" />
+<android.support.v7.widget.Toolbar
+    android:id="@+id/tutorial_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="0dp"
+    android:background="@color/colorToolBarBackground"
+    android:elevation="2dp"
+    android:minHeight="?attr/actionBarSize" />
 
 </RelativeLayout>
