--- a/app/src/main/res/layout/effect_recycle_view.xml
+++ b/app/src/main/res/layout/effect_recycle_view.xml
@@ -4,8 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="#000"
-    >
+    android:background="#000">
 
     <android.support.v7.widget.CardView
         android:layout_width="78dp"
@@ -24,10 +23,10 @@
                 android:id="@+id/effect_image"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
+                android:layout_centerHorizontal="true"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="3dp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_tool_example_48dp"
+                android:background="@drawable/ic_brush_24"
                 android:contentDescription="@string/todo"
                 android:scaleType="centerCrop" />
 
@@ -39,13 +38,13 @@
                 android:layout_below="@+id/effect_image"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="3dp"
-                android:textSize="10sp"
                 android:autoSizeMaxTextSize="14sp"
                 android:autoSizeMinTextSize="6sp"
                 android:autoSizeTextType="uniform"
                 android:gravity="center"
                 android:text="@string/fn"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="10sp" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
