--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/batch"
+        android:id="@+id/item_batch"
         android:title="@string/menu_batch"
         android:orderInCategory="100"
         android:icon="@drawable/ic_add_photo"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/info"
+        android:id="@+id/item_info"
         android:title="@string/menu_info"
         android:orderInCategory="100"
         android:icon="@drawable/ic_info"
