--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#856400</color>
+    <color name="colorPrimaryDark">#573E00</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryBackground">#EBEBEB</color>
+    <color name="colorToolBarBackground">#F3F3F3</color>
 
     <color name="colorActionBarBackground">#FFFFFF</color>
     <color name="colorActionBarTitle">#919191</color>
     <color name="colorItemBackground">#FFFFFF</color>
+
 
     <color name="colorNavIcon">#919191</color>
     <color name="colorNavTitle">#919191</color>
