--- a/app/src/main/res/layout/activity_gallery_main.xml
+++ b/app/src/main/res/layout/activity_gallery_main.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/gallery_main_toolbar"
@@ -13,6 +14,26 @@
         android:background="@color/colorToolBarBackground"
         android:elevation="2dp"
         android:minHeight="?attr/actionBarSize" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="56dp"
+        android:paddingBottom="56dp"
+        android:baselineAligned="false"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:padding="5dp"
+                android:id="@+id/gallery_folder_recycle_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/gallery_main_bottom_bar"
