--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,11 @@
 
     <color name="colorNavIcon">#919191</color>
     <color name="colorNavTitle">#919191</color>
+
+    <!--GALLERY-->
+    <color name="gallery_main_background">#FFFFFF</color>
+    <color name="gallery_text_black">#FF333333</color>
+    <color name="gallery_text_gray">#FF999999</color>
+
 </resources>
+
