--- a/app/src/main/res/layout/gallery_main_activity.xml
+++ b/app/src/main/res/layout/gallery_main_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@color/gallery_main_background">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/gallery_main_toolbar"
@@ -25,12 +25,12 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:padding="5dp"
-                android:id="@+id/gallery_folder_recycle_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:padding="5dp"
+            android:id="@+id/gallery_folder_recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
