--- a/app/src/main/res/layout/editor_main_activity.xml
+++ b/app/src/main/res/layout/editor_main_activity.xml
@@ -60,7 +60,7 @@
     </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+        android:id="@+id/editor_main_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -69,6 +69,6 @@
         app:itemBackground="@android:color/white"
         app:itemIconTint="@color/colorNavIcon"
         app:itemTextColor="@color/colorNavIcon"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/main_navigation" />
 
 </RelativeLayout>
