--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="gallery_text_black">#FF333333</color>
     <color name="gallery_text_gray">#FF999999</color>
     <color name="gallery_photo_background">#535353</color>
+    <color name="gallery_nav_icon">#FFFFFF</color>
+    <color name="gallery_nav_title">#FFFFFF</color>
 
 </resources>
 
