--- a/app/src/main/res/layout/editor_item_tools.xml
+++ b/app/src/main/res/layout/editor_item_tools.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
-    android:background="#000">
+    android:background="@color/editor_cardview_background">
 
     <android.support.v7.widget.CardView
         android:layout_width="78dp"
@@ -12,8 +12,8 @@
         android:layout_centerInParent="true"
         android:background="#fff"
         app:cardCornerRadius="8dp"
-        app:cardElevation="2dp"
-        app:cardMaxElevation="4dp">
+        app:cardElevation="0dp"
+        app:cardMaxElevation="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="3dp"
                 android:autoSizeMaxTextSize="14sp"
-                android:autoSizeMinTextSize="6sp"
+                android:autoSizeMinTextSize="8sp"
                 android:autoSizeTextType="uniform"
                 android:gravity="center"
                 android:text="@string/fn"
