--- a/app/src/main/res/layout/editor_main_activity.xml
+++ b/app/src/main/res/layout/editor_main_activity.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/editorMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -21,7 +22,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="56dp"
         android:layout_marginBottom="56dp"
-        android:background="@android:color/background_dark"
+        android:background="@color/editor_preview_background"
         android:orientation="vertical">
 
         <LinearLayout
